# jitfusion

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  _config.yml  a.cc  index.md  llvm_repository.bzl
.github/workflows/: benchmark.yml  ci.yml  pages.yml
athena/: BUILD  README.md  ast_builder.cc  ast_builder.h  athena.cc  athena.h  athena_test.cc  dsu.cc  dsu.h  gen_parser.sh  location.hh  parser.cc  parser.hh  parser.yy  pipeline_grouper.cc  pipeline_grouper.h  token.cc  token.ll
athena/test/: comment_test.cc  const_value_test.cc  const_var_test.cc  control_flow_test.cc  cse_test.cc  diagnostic_test.cc  exec_error_test.cc  function_test.cc  list_function_test.cc  logical_op_test.cc  operator_test.cc  pipeline_grouper_test.cc  pipeline_test.cc  ref_node_test.cc  string_function_test.cc  test_helper.h  when_test.cc
benchmark/: bench_common.h  bench_compile.cc  bench_execute_core.cc  bench_list_agg.cc  bench_list_basic.cc  bench_list_binary.cc  bench_list_compare.cc  bench_list_indexing.cc  bench_native_base.cc  engine_benchmark.cc
dev/bench/: data.js
doc/: function.md
include/: arena.h  batch_exec_engine.h  diagnostic.h  exec_engine.h  exec_node.h  exec_options.h  function_registry.h  status.h  type.h
src/: BUILD  arena.cc  batch_exec_engine.cc  compiled_artifact.cc  compiled_artifact.h  diagnostic.cc  exec_engine.cc  exec_node.cc  execute_dispatch.h  function_registry.cc  jit_core.cc  jit_core.h  scope_stack.h  test.cc  type.cc  validator.cc  validator.h
src/codegen/: binary_op_codegen.cc  codegen.cc  codegen.h  const_global_emit.cc  const_global_emit.h  const_list_value_codegen.cc  const_value_codegen.cc  entry_argument_codegen.cc  exec_context_codegen.cc  function_codegen.cc  if_block_codegen.cc  if_codegen.cc  no_op_codegen.cc  output_node_codegen.cc  ref_node_codegen.cc  switch_codegen.cc  unary_op_codegen.cc
src/function/: function_init.h  list_aggregation.cc  list_arithmetic.cc  list_basic.cc  list_comparison.cc  list_function_init.cc  list_group.cc  list_indexing.cc  math_function_init.cc  memory_function_init.cc  murmurhash3.cc  murmurhash3.h  string_function_init.cc
test/: arena_test.cc  binary_op_test.cc  const_list_value_test.cc  const_value_node_test.cc  empty_list_test.cc  entry_argument_node_test.cc  exec_context_node_test.cc  exec_error_test.cc  function_test.cc  if_block_test.cc  if_test.cc  list_aggregation_test.cc  list_arithmetic_test.cc  list_basic_test.cc  list_bitwise_test.cc  list_cast_test.cc  list_comparison_test.cc  list_conditional_test.cc  list_function_test.cc  list_group_test.cc  list_indexing_test.cc  list_math_test.cc  list_misc_test.cc  no_op_test.cc  relocatable_const_test.cc  save_load_test.cc  switch_test.cc  unary_op_test.cc
